[package]
name = "active_sse"
version = "0.1.1"
authors = ["Chris Holdt <4070267+Chris-Holdt@users.noreply.github.com>"]
edition = "2018"

description = "Activeledger Rust SDK for SSE - Server Sent Events"
repository = "https://github.com/activeledger/SDK-Rust-Events"
homepage = "https://activeledger.io"
readme = "Readme.md"
keywords = ["activeledger", "dlt", "blockchain", "distributed", "ledger"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
sse-client = "1.0.0"